Code cleanup. Gradle updated to 4.6.