@@ -1,5 +1,3 @@
-apply plugin: 'org.junit.platform.gradle.plugin'
-
 dependencies {
 
     /* Bean Mirror. */
@@ -34,8 +32,6 @@ compileTestJava {
     doFirst {
         options.compilerArgs = [
                 '--module-path', classpath.asPath,
-                // '--add-modules', 'junit',
-                // '--add-reads', "$moduleName=junit",
                 '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
         ]
         classpath = files()
